# R_type

./: CMakeLists.txt  config.json
include/: App.hpp
include/ECS/: AnimationSystem.hpp  ColysionSystem.hpp  ComponentManager.hpp  Coordinator.hpp  Entity.hpp  EntityManager.hpp  IComponent.hpp  ISystems.hpp  InputSystem.hpp  SparseEntityArray.hpp  SpeedSystem.hpp  System.hpp
include/graphic/: IGraphic.hpp  graphic.hpp
src/: AnimationSystem.cpp  App.cpp  CollisionSystem.cpp  Entity.cpp  InputSystem.cpp  SpeedSystem.cpp  System.cpp  graphic.cpp  main.cpp
